--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 Asperiores nostrum reprehenderit architecto odio aliquid, autem
-                itaque dolore amet excepturi ipsa!
+                itaque dolore amet excepturi ipsa! - Lorem ipsum dolor sit amet
+                consectetur adipisicing elit.
               </p>
             </a>
           </article>
@@ -57,7 +58,7 @@
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 Asperiores nostrum reprehenderit architecto odio aliquid, autem
-                itaque dolore amet excepturi ipsa!
+                itaque dolore amet excepturi ipsa! - Lorem ipsum dolor sit.
               </p>
             </a>
           </article>
@@ -79,7 +80,8 @@
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 Asperiores nostrum reprehenderit architecto odio aliquid, autem
-                itaque dolore amet excepturi ipsa!
+                itaque dolore amet excepturi ipsa! - Lorem ipsum dolor sit amet
+                consectetur adipisicing elit. Quibusdam minima ipsa aliquid!
               </p>
             </a>
           </article>
@@ -97,7 +99,7 @@
                 <h3 class="mainContent_title">Hostel</h3>
                 <p>
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Recusandae vel minima reiciendis nostrum aut ab.
+                  Recusandae vel minima reiciendis nostrum aut ab. - Lorem ipsum dolor sit amet.
                 </p>
               </div>
             </div>
@@ -127,7 +129,7 @@
                 <h3 class="mainContent_title">Hostel</h3>
                 <p>
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Recusandae vel minima reiciendis nostrum aut ab.
+                  Recusandae vel minima reiciendis nostrum aut ab. - Lorem ipsum dolor sit amet consectetur, adipisicing elit. Placeat, architecto!
                 </p>
               </div>
             </div>
@@ -152,7 +154,11 @@
     </main>
     <footer>
       <p>Copyright The Range</p>
-      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Est, quaerat corrupti tenetur, voluptatum autem cumque accusamus fugiat, cum id aliquid tempora aperiam totam tempore provident!</p>
+      <p>
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Est, quaerat
+        corrupti tenetur, voluptatum autem cumque accusamus fugiat, cum id
+        aliquid tempora aperiam totam tempore provident!
+      </p>
     </footer>
   </body>
 </html>
